--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "i18next": "^21.8.16",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^11.18.3",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
