--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.3",
     "react-redux": "^8.0.2",
+    "react-spinners": "^0.13.4",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.53.0",
