--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "downloadjs": "^1.4.7",
+    "file-loader": "^6.2.0",
+    "file-saver": "^2.0.5",
     "i18next": "^21.8.16",
     "next": "12.2.2",
     "react": "18.2.0",
