--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-HOSTNAME=https://real-portfolio-api.herokuapp.com/
+HOSTNAME=https://web-production-e037.up.railway.app/
 USER=syphhy
 PASS=ZethraGG12
